adding first section contact header

--- a/assets/index.html
+++ b/assets/index.html
@@ -14,13 +14,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom CSS Link -->
-    <link rel="stylesheet" href="../css/font.css">
+    <!-- <link rel="stylesheet" href="../css/font.css">  -->
     <link rel="stylesheet" href="../css/color.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- **** Header Section Start **** -->
-    
+   <header>
+       <div class="container-fluid primary-bg">
+           <div class="caontainer">
+               <div class="row d-flex justify-content-center">
+                   <div class="col py-2 col-lg-4 col-md-6 col-12">
+                       <span>
+                            <i class="fa-solid fa-phone"></i>
+                           +880 1710-335722
+                        </span>
+                   </div>
+                   <div class="col py-2 col-lg-5 col-md-6 col-12">
+                       <span>
+                            <i class="fa-solid fa-location-dot"></i>
+                           Yeakub Future Park, Pachlise, Chittagong.
+                        </span>
+                   </div>
+                   <div class="col py-2 col-lg-3 col-md-12 col-12">
+                       <span>
+                           <a href="http://" class="pr-4">
+                                <i class="fa-solid fa-user-plus"></i>
+                               Login
+                            </a>
+                           <a href="http://">
+                                <i class="fa-solid fa-list-check"></i>
+                               Wish List
+                            </a>
+                       </span>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </header>
     <!-- **** Header Section End **** -->
 
     <!-- **** Nav Section Start **** -->
