--- a/assets/index.html
+++ b/assets/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
+
     <!-- OWL Carosel CSS Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -24,28 +26,38 @@
        <div class="container-fluid primary-bg">
            <div class="caontainer">
                <div class="row d-flex justify-content-center">
-                   <div class="col py-2 col-lg-4 col-md-6 col-12">
-                       <span>
-                            <i class="fa-solid fa-phone"></i>
-                           +880 1710-335722
+                   <div class="d-flex justify-content-center col py-2 col-lg-4 col-md-6 col-12">
+                       <span class="color-white t-header-hover">
+                            <small>
+                              <i class="fa-solid fa-phone"></i>
+                              +880 1710-335722
+                            </small>
+                            <small class="">
+                              <i class="fa-solid fa-envelope"></i>
+                              bkbangladesh02@gmail.com
+                            </small>
                         </span>
                    </div>
-                   <div class="col py-2 col-lg-5 col-md-6 col-12">
-                       <span>
-                            <i class="fa-solid fa-location-dot"></i>
-                           Yeakub Future Park, Pachlise, Chittagong.
+                   <div class="d-flex justify-content-center col py-2 col-lg-5 col-md-6 col-12">
+                       <span class="color-white t-header-hover">
+                            <small>
+                              <i class="fa-solid fa-location-dot"></i>
+                              Yeakub Future Park, Pachlise, Chittagong.
+                            </small>
                         </span>
                    </div>
-                   <div class="col py-2 col-lg-3 col-md-12 col-12">
-                       <span>
-                           <a href="http://" class="pr-4">
-                                <i class="fa-solid fa-user-plus"></i>
-                               Login
-                            </a>
-                           <a href="http://">
+                   <div class="d-flex justify-content-center col py-2 col-lg-3 col-md-12 col-12">
+                       <span class="color-white t-header-hover">
+                           <small>
+                            <a href="http://" class="pr-4">
+                              <i class="fa-solid fa-user-plus"></i>
+                             Login
+                          </a>
+                          <a href="http://">
                                 <i class="fa-solid fa-list-check"></i>
-                               Wish List
+                              Wish List
                             </a>
+                           </small>
                        </span>
                    </div>
                </div>
@@ -55,12 +67,105 @@
     <!-- **** Header Section End **** -->
 
     <!-- **** Nav Section Start **** -->
-    <!-- **** Nav Section End **** -->
+    <nav class="container-fluid navbar navbar-expand-lg navbar-light secondery-bg">
+      <div class="container d-flex justify-content-between">
+        <div class="col-lg-6 d-flex justify-content-between">
+          <div class="col-lg-6 col-md-6 col-6">
+            <a class="navbar-brand logo" href="#">
+              <span class="first-logo">MY</span><span class="last-logo">SHOP</span>
+            </a>
+          </div>
+          <form action="#"  class="col-lg-6 col-md-6 col-6 d-flex justify-content-center  align-items-center px-3">
+            <span class="add-t-cart">
+              CarT
+            </span>
+          </form>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav color-white color-w-h">
+            <li class="nav-item">
+              <a class="nav-link color-white color-w-h active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link color-white color-w-h" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link color-white color-w-h" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown primary-bg-h">
+              <a class="nav-link dropdown-toggle color-white" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu secondery-bg" aria-labelledby="navbarDropdownMenuLink">
+                <li>
+                  <a class="dropdown-item" href="#">
+                    Action
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    Another action
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">
+                    Something else here
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+   <!-- **** Nav Section End **** -->
+
+    <!-- **** Slaider Section Start **** -->
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/4.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <button>Buy Now</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/3.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <button>Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- **** Slaider Section Start **** -->
 
     <!-- **** Header Section Start **** -->
-    <!-- **** Header Section Start **** -->
-
-    <!-- **** Header Section Start **** -->
+    <div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aliquid placeat assumenda, fuga, unde nobis cum dolor dicta similique nulla facilis cupiditate expedita amet! Saepe et, dolore optio minima sint nemo, fuga dolorum quae magnam natus illum? Aperiam dicta laudantium blanditiis aliquam alias in similique maxime ex, odit, accusamus eaque vel iure praesentium officia ipsum suscipit neque rerum consectetur necessitatibus. Iste doloremque adipisci fugiat omnis autem ad unde facere ratione minus dolores quam illo odit non ipsa voluptas delectus quia quibusdam deleniti, ex incidunt minima ea fugit rerum. Dolores reprehenderit esse modi impedit rerum, sequi ipsum quas quia nulla omnis vitae cum voluptatem quaerat est et minima? Rerum repellat qui doloremque nihil harum possimus recusandae repellendus dolor unde. Eveniet eligendi quae nulla voluptates explicabo culpa nobis mollitia, aliquam enim pariatur neque velit tempora, fugit asperiores dolore dolor reiciendis sed minus. Officia atque ullam praesentium est doloribus corporis impedit, facere fugiat iusto error! Recusandae omnis, beatae tempore doloremque fuga deleniti iusto quo expedita? Aliquam doloribus aut non. At, dicta repellendus consequuntur vitae ad modi reprehenderit voluptatum tempore sint rem non id autem necessitatibus nobis debitis beatae suscipit commodi! Qui, exercitationem. Eligendi sit odit dolor ex, adipisci, tempore, aperiam fugit veritatis quam dignissimos consectetur pariatur obcaecati amet maxime voluptatem tempora deleniti suscipit provident vero quas praesentium eos accusantium ab? Suscipit, alias adipisci asperiores amet dolor possimus similique nemo sint, eum neque, illum accusamus itaque officiis? Rem pariatur, natus laudantium soluta veniam unde, esse eligendi atque at aut fugiat mollitia repellendus et doloribus, sint ipsam veritatis deleniti iste repellat! Ad itaque, enim tempore odio adipisci doloribus quos inventore, iste ipsam voluptatibus obcaecati nam sit aliquid magnam. Voluptate facilis dolore ipsam id perferendis placeat itaque aut, numquam quibusdam repellendus temporibus, pariatur possimus et tenetur odio sequi accusamus dolorum. Unde nesciunt dolorum at nihil et.</p>
+    </div>
     <!-- **** Header Section Start **** -->
 
 
