--- a/assets/index.html
+++ b/assets/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- **** Header Section Start **** -->
    <header>
-       <div class="container-fluid primary-bg">
+       <div class="container-fluid primary-bg font-raleway">
            <div class="caontainer">
                <div class="row d-flex justify-content-center">
                    <div class="d-flex justify-content-center col py-2 col-lg-4 col-md-6 col-12">
@@ -67,7 +67,7 @@
     <!-- **** Header Section End **** -->
 
     <!-- **** Nav Section Start **** -->
-    <nav class="container-fluid navbar navbar-expand-lg navbar-light secondery-bg">
+    <nav class="font-baloo container-fluid navbar navbar-expand-lg navbar-light secondery-bg">
       <div class="container d-flex justify-content-between">
         <div class="col-lg-6 d-flex justify-content-between">
           <div class="col-lg-6 col-md-6 col-6">
@@ -77,7 +77,13 @@
           </div>
           <form action="#"  class="col-lg-6 col-md-6 col-6 d-flex justify-content-center  align-items-center px-3">
             <span class="add-t-cart">
-              CarT
+              <button type="button" class="primary-bg btn btn-primary position-relative">
+                CarT
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill green-bg">
+                  99+
+                  <span class="visually-hidden">unread messages</span>
+                </span>
+              </button>
             </span>
           </form>
         </div>
