add slaider card

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,16 +8,10 @@
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.7/dist/flowbite.min.css" />
-
-    <!-- OWL Carosel CSS Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- Custom CSS Link -->
     <!-- <link rel="stylesheet" href="../css/font.css">  -->
     <link rel="stylesheet" href="../css/color.css">
+    <link rel="stylesheet" href="../css/font.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -158,21 +152,183 @@
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="s-icon">
+          <i class="fa-solid fa-chevron-left"></i>
+        </span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="s-icon">
+          <i class="fa-solid fa-chevron-right"></i>
+        </span>
       </button>
     </div>
     <!-- **** Slaider Section Start **** -->
 
-    <!-- **** Header Section Start **** -->
-    <div>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis aliquid placeat assumenda, fuga, unde nobis cum dolor dicta similique nulla facilis cupiditate expedita amet! Saepe et, dolore optio minima sint nemo, fuga dolorum quae magnam natus illum? Aperiam dicta laudantium blanditiis aliquam alias in similique maxime ex, odit, accusamus eaque vel iure praesentium officia ipsum suscipit neque rerum consectetur necessitatibus. Iste doloremque adipisci fugiat omnis autem ad unde facere ratione minus dolores quam illo odit non ipsa voluptas delectus quia quibusdam deleniti, ex incidunt minima ea fugit rerum. Dolores reprehenderit esse modi impedit rerum, sequi ipsum quas quia nulla omnis vitae cum voluptatem quaerat est et minima? Rerum repellat qui doloremque nihil harum possimus recusandae repellendus dolor unde. Eveniet eligendi quae nulla voluptates explicabo culpa nobis mollitia, aliquam enim pariatur neque velit tempora, fugit asperiores dolore dolor reiciendis sed minus. Officia atque ullam praesentium est doloribus corporis impedit, facere fugiat iusto error! Recusandae omnis, beatae tempore doloremque fuga deleniti iusto quo expedita? Aliquam doloribus aut non. At, dicta repellendus consequuntur vitae ad modi reprehenderit voluptatum tempore sint rem non id autem necessitatibus nobis debitis beatae suscipit commodi! Qui, exercitationem. Eligendi sit odit dolor ex, adipisci, tempore, aperiam fugit veritatis quam dignissimos consectetur pariatur obcaecati amet maxime voluptatem tempora deleniti suscipit provident vero quas praesentium eos accusantium ab? Suscipit, alias adipisci asperiores amet dolor possimus similique nemo sint, eum neque, illum accusamus itaque officiis? Rem pariatur, natus laudantium soluta veniam unde, esse eligendi atque at aut fugiat mollitia repellendus et doloribus, sint ipsam veritatis deleniti iste repellat! Ad itaque, enim tempore odio adipisci doloribus quos inventore, iste ipsam voluptatibus obcaecati nam sit aliquid magnam. Voluptate facilis dolore ipsam id perferendis placeat itaque aut, numquam quibusdam repellendus temporibus, pariatur possimus et tenetur odio sequi accusamus dolorum. Unde nesciunt dolorum at nihil et.</p>
+    <!-- Featured start -->
+    <div class="container-fluid py-3">
+      <div class="card text-center py-2">
+        <div class="card-header">
+          Featured
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="cart-btn">Go somewhere</a>
+        </div>
+        <div class="card-footer text-muted">
+          2 days ago
+        </div>
+      </div>
     </div>
-    <!-- **** Header Section Start **** -->
+    <!-- Featured End -->
+
+    <!-- **** Top Sell Section Start **** -->
+    <div class="container-fluid py-3">
+      <div class="container">
+        <div class="py-2 border-bottom">
+          <h1 class="font-baloo">
+            Topproduct's
+          </h1>
+          <small class="ps-2 text-muted font-rubik">We Provide goog for you</small>
+        </div>
+        <div class="row row-cols-1 py-2 row-cols-md-3 g-4">
+          <div class="py-2 col col-lg-3 product-c col-md-4 col-6">
+            <div class="product-c pt-1  p-2 card">
+              <div class="d-flex justify-content-center">
+                <img src="./img/1.jpg" class="Big-c img-fluid product-c-img card-img-top" alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-rubik">Cheir</h5>
+                <div class="justify-content-around py-1 d-flex">
+                  <span>
+                    <h5>
+                      <mark>$55</mark>
+                    </h5>
+                  </span>
+                  <span class="ps-3">
+                    <del>$80</del>
+                  </span>
+                </div>
+                <div class="pt-2 d-flex justify-content-center">
+                  <a href="" class="text-center cart-btn">Add to Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-2 col col-lg-3 product-c col-md-4 col-6">
+            <div class="product-c pt-1  p-2 card">
+              <div class="d-flex justify-content-center">
+                <img src="./img/2.jpg" class="Big-c img-fluid product-c-img card-img-top" alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-rubik">Cheir</h5>
+                <div class="justify-content-around py-1 d-flex">
+                  <span>
+                    <h5>
+                      <mark>$55</mark>
+                    </h5>
+                  </span>
+                  <span class="ps-3">
+                    <del>$80</del>
+                  </span>
+                </div>
+                <div class="pt-2 d-flex justify-content-center">
+                  <a href="" class="text-center cart-btn">Add to Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-2 col col-lg-3 product-c col-md-4 col-6">
+            <div class="product-c pt-1  p-2 card">
+              <div class="d-flex justify-content-center">
+                <img src="./img/3.jpg" class="Big-c img-fluid product-c-img card-img-top" alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-rubik">Cheir</h5>
+                <div class="justify-content-around py-1 d-flex">
+                  <span>
+                    <h5>
+                      <mark>$55</mark>
+                    </h5>
+                  </span>
+                  <span class="ps-3">
+                    <del>$80</del>
+                  </span>
+                </div>
+                <div class="pt-2 d-flex justify-content-center">
+                  <a href="" class="text-center cart-btn">Add to Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-2 col col-lg-3 product-c col-md-4 col-6">
+            <div class="product-c pt-1  p-2 card">
+              <div class="d-flex justify-content-center">
+                <img src="./img/4.jpg" class="Big-c img-fluid product-c-img card-img-top" alt="...">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title font-rubik">Cheir</h5>
+                <div class="justify-content-around py-1 d-flex">
+                  <span>
+                    <h5>
+                      <mark>$55</mark>
+                    </h5>
+                  </span>
+                  <span class="ps-3">
+                    <del>$80</del>
+                  </span>
+                </div>
+                <div class="pt-2 d-flex justify-content-center">
+                  <a href="" class="text-center cart-btn">Add to Cart</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- **** Top Sell Section Start **** -->
+
+    <!-- Brand add start -->
+    <div class="container-fluid py-3">
+      <div class="container">
+        <div class="row">
+          <div class="ad-bg col col-lg-6 col-md-6 col-12">
+            <div class="row card-body">
+              <div class="col col-lg-4 col-md-4 col-6 d-flex justify-content-center p-2">
+                <img src="./img/2.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col col-lg-8 col-md-8 col-12 p-2">
+                <h3 class="card-title font-rubik">White Sofa</h3>
+                <small class="f-color-sk-b font-raleway">Lorem ipsum, dolor sit amet conser adip.</small>
+                <p class="card-text font-baloo pt-2">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <small class="mins-ag">Last updated 3 mins ago.</small>
+              </div>
+            </div>
+          </div>
+          <!-- ========**======== -->
+          <div class="col col-lg-6 col-md-6 col-12">
+            <div class="row card-body  ad-bg">
+              <div class="col col-lg-8 col-md-8 col-12 p-2">
+                <h3 class="card-title font-rubik">Greay Cheir</h3>
+                <small class="f-color-sk-b font-raleway">Lorem ipsum, dolor sit amet conser adip.</small>
+                <p class="card-text font-baloo pt-2">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <small class="mins-ag">Last updated 3 mins ago.</small>
+              </div>
+              <div class="col col-lg-4 col-md-4 col-6 d-flex justify-content-center p-2">
+                <img src="./img/4.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+            </div>
+          </div>
+          <!-- ========**======= -->
+        </div>
+      </div>
+    </div>
+    <!-- Brand add End -->
+
+    <!-- Small card's start -->
+    
+    <!-- Small cards's end -->
 
 
     <!-- Bootstrap JS Link -->
@@ -180,5 +336,11 @@
 
     <!-- Font Awesome JS Link -->
     <script src="https://kit.fontawesome.com/b90d154801.js" crossorigin="anonymous"></script>
+
+    <!--  isotope plugin cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
+
+    <!-- Custom JS File -->
+    <script src="./js/index.js"></script>
 </body>
 </html>
