--- a/index.html
+++ b/index.html
@@ -581,15 +581,15 @@
         <!-- dawnload app section end -->
 
         <!-- students review start -->
-        <div class="container-fluid">
+        <div class="container-fluid py-3">
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-2 g-4">
-                    <div class="col-lg-6 col-md-6 col-12">
+                <div class="row border-1 row-cols-1 row-cols-md-2 g-4">
+                    <div class="col-lg-6 p-3 rvew col-md-6 col-12">
                         <div class="card border-0">
                           <div class="d-flex justify-content-center">
                             <img src="./img/is.jpg" class="p-1 s-rv" alt="...">
                           </div>
-                          <div class="d-flex justify-content-center">
+                          <div class="py-2 st-rv d-flex justify-content-center">
                             <i class="fa-solid fa-star text-center c-green"></i>
                             <i class="fa-solid fa-star text-center c-green"></i>
                             <i class="fa-solid fa-star text-center c-green"></i>
